source/puppet/4.7/man/ca.md
---
layout: default
built_from_commit: 569f28bea57644ed05719c92ecf19fcc532111aa
title: 'Man Page: puppet ca'
canonical: /puppet/latest/reference/man/ca.html
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-ca</code> - <span class="man-whatis">Local Puppet Certificate Authority management.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet ca <var>action</var></p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This provides local management of the Puppet Certificate Authority.</p>

<p>You can use this subcommand to sign outstanding certificate requests, list
and manage local certificates, and inspect the state of the CA.</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any setting that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
settings, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="https://docs.puppetlabs.com/puppet/latest/reference/configuration.html" data-bare-link="true">https://docs.puppetlabs.com/puppet/latest/reference/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<ul>
<li><p><code>destroy</code> - Destroy named certificate or pending certificate request.:
<code>SYNOPSIS</code></p>

<p>puppet ca destroy</p>

<p><code>DESCRIPTION</code></p>

<p>Destroy named certificate or pending certificate request.</p></li>
<li><p><code>fingerprint</code> - Print the DIGEST (defaults to the signing algorithm) fingerprint of a host's certificate.:
<code>SYNOPSIS</code></p>

<p>puppet ca fingerprint [--digest ALGORITHM]</p>

<p><code>DESCRIPTION</code></p>

<p>Print the DIGEST (defaults to the signing algorithm) fingerprint of a host's certificate.</p>

<p><code>OPTIONS</code>
<var>--digest ALGORITHM</var> -
The hash algorithm to use when displaying the fingerprint</p></li>
<li><p><code>generate</code> - Generate a certificate for a named client.:
<code>SYNOPSIS</code></p>

<p>puppet ca generate [--dns-alt-names NAMES]</p>

<p><code>DESCRIPTION</code></p>

<p>Generate a certificate for a named client.</p>

<p><code>OPTIONS</code>
<var>--dns-alt-names NAMES</var> -
A comma-separated list of alternate DNS names for Puppet Server. These are extra
hostnames (in addition to its <code>certname</code>) that the server is allowed to use when
serving agents. Puppet checks this setting when automatically requesting a
certificate for Puppet agent or Puppet Server, and when manually generating a
certificate with <code>puppet cert generate</code>.</p>

<p>In order to handle agent requests at a given hostname (like
"puppet.example.com"), Puppet Server needs a certificate that proves it's
allowed to use that name; if a server shows a certificate that doesn't include
its hostname, Puppet agents will refuse to trust it. If you use a single
hostname for Puppet traffic but load-balance it to multiple Puppet Servers, each
of those servers needs to include the official hostname in its list of extra
names.</p>

<p><strong>Note:</strong> The list of alternate names is locked in when the server's
certificate is signed. If you need to change the list later, you can't just
change this setting; you also need to:</p>

<ul>
<li>On the server: Stop Puppet Server.</li>
<li>On the CA server: Revoke and clean the server's old certificate. (<code>puppet cert clean &lt;NAME></code>)</li>
<li>On the server: Delete the old certificate (and any old certificate signing requests)
from the <a href="https://docs.puppetlabs.com/puppet/latest/reference/dirs_ssldir.html">ssldir</a>.</li>
<li>On the server: Run <code>puppet agent -t --ca_server &lt;CA HOSTNAME></code> to request a new certificate</li>
<li>On the CA server: Sign the certificate request, explicitly allowing alternate names
(<code>puppet cert sign --allow-dns-alt-names &lt;NAME></code>).</li>
<li>On the server: Run <code>puppet agent -t --ca_server &lt;CA HOSTNAME></code> to retrieve the cert.</li>
<li>On the server: Start Puppet Server again.</li>
</ul>


<p>To see all the alternate names your servers are using, log into your CA server
and run <code>puppet cert list -a</code>, then check the output for <code>(alt names: ...)</code>.
Most agent nodes should NOT have alternate names; the only certs that should
have them are Puppet Server nodes that you want other agents to trust.</p></li>
<li><p><code>list</code> - List certificates and/or certificate requests.:
<code>SYNOPSIS</code></p>

<p>puppet ca list [--[no-]all]
[--[no-]pending]
[--[no-]signed]
[--digest ALGORITHM]
[--subject PATTERN]</p>

<p><code>DESCRIPTION</code></p>

<p>This will list the current certificates and certificate signing requests
in the Puppet CA.  You will also get the fingerprint, and any certificate
verification failure reported.</p>

<p><code>OPTIONS</code>
<var>--[no-]all</var> -
Include all certificates and requests.</p>

<p><var>--digest ALGORITHM</var> -
The hash algorithm to use when displaying the fingerprint</p>

<p><var>--[no-]pending</var> -
Include pending certificate signing requests.</p>

<p><var>--[no-]signed</var> -
Include signed certificates.</p>

<p><var>--subject PATTERN</var> -
Only include certificates or requests where subject matches PATTERN.</p>

<p>PATTERN is interpreted as a regular expression, allowing complex
filtering of the content.</p></li>
<li><p><code>print</code> - Print the full-text version of a host's certificate.:
<code>SYNOPSIS</code></p>

<p>puppet ca print</p>

<p><code>DESCRIPTION</code></p>

<p>Print the full-text version of a host's certificate.</p></li>
<li><p><code>revoke</code> - Add certificate to certificate revocation list.:
<code>SYNOPSIS</code></p>

<p>puppet ca revoke</p>

<p><code>DESCRIPTION</code></p>

<p>Add certificate to certificate revocation list.</p></li>
<li><p><code>sign</code> - Sign an outstanding certificate request.:
<code>SYNOPSIS</code></p>

<p>puppet ca sign [--[no-]allow-dns-alt-names]</p>

<p><code>DESCRIPTION</code></p>

<p>Sign an outstanding certificate request.</p>

<p><code>OPTIONS</code>
<var>--[no-]allow-dns-alt-names</var> -
Whether or not to accept DNS alt names in the certificate request</p></li>
<li><p><code>verify</code> - Verify the named certificate against the local CA certificate.:
<code>SYNOPSIS</code></p>

<p>puppet ca verify</p>

<p><code>DESCRIPTION</code></p>

<p>Verify the named certificate against the local CA certificate.</p></li>
</ul>


<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2011 by Puppet Labs
Apache 2 license; see COPYING</p>

</div>
